--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,14 +6,15 @@
         <div>
             <h1><a href="">Django Girls Blog</a></h1>
         </div>
+      {% for post in posts %}
 
-        <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My first trip</a></h2>
             <p> Hola hola hola......</p>
-        </div>
+         </div>
+        {% endfor %}
 
-        <div>
+      <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My second trip</a></h2>
             <p>viaggiare viaggiare</p>
